# ros2_gremsy_gimbal_control

./: README.md
install/: local_setup.sh  setup.sh
install/PayloadSDK/share/PayloadSDK/: package.bash  package.zsh
install/cv_bridge/share/cv_bridge/: local_setup.sh  package.sh
install/eo_image/share/eo_image/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gimbal_angle_control/share/gimbal_angle_control/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gimbal_capture_image/lib/gimbal_capture_image/: gimbal_capture_image
install/gimbal_capture_image/share/gimbal_capture_image/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: Readme.md
src/eo_image/: CMakeLists.txt  package.xml
src/eo_image/src/: eo_image_node.cpp
src/eo_zoom/: CMakeLists.txt  package.xml
src/eo_zoom/src/: eo_zoom_node.cpp
src/gimbal_angle_control/: CMakeLists.txt
src/gimbal_bringup/: package.xml
src/gimbal_bringup/launch/: gimbal_system.launch.py
src/gimbal_status/: CMakeLists.txt
src/gimbal_status/src/: gimbal_status_node.cpp
src/human_tracking/human_tracking/: tracking_node.py
src/image_publisher/: CMakeLists.txt
src/image_publisher/src/: image_publisher.cpp
src/ir_image/: CMakeLists.txt
src/ir_image/src/: ir_image_node.cpp
src/ir_zoom/: CMakeLists.txt  package.xml
src/ir_zoom/src/: ir_zoom_node.cpp
src/yolo_detection/: package.xml  setup.py
src/yolo_detection/yolo_detection/: yolo_detector_node.py
(+38 files in other folders)
